# spliterminal

./: .gitmodules  README.md  meson.build
data/: com.github.msmaldi.spliterminal.appdata.xml.in  com.github.msmaldi.spliterminal.desktop.in  com.github.msmaldi.spliterminal.gschema.xml  meson.build
debian/: changelog  control  copyright
src/: Application.vala
src/Widgets/: HeaderBar.vala  LoadingBox.vala  WorkspaceStack.vala  WorkspaceSwitcher.vala
